[gd_scene load_steps=4 format=3 uid="uid://b3l7quqlx1vvo"]

[ext_resource type="Script" path="res://addons/AMFSM/callable_selection_dialog.gd" id="1_jp6f5"]
[ext_resource type="Texture2D" uid="uid://bvougical7gbp" path="res://addons/AMFSM/icons/Pick.svg" id="2_srxln"]
[ext_resource type="Texture2D" uid="uid://be0kwqe7dypu6" path="res://addons/AMFSM/icons/Search.svg" id="3_iv5k0"]

[node name="CallableSelectionDialog" type="ConfirmationDialog"]
auto_translate_mode = 1
title = "Select Method"
initial_position = 4
size = Vector2i(480, 640)
min_size = Vector2i(480, 512)
ok_button_text = "Select"
script = ExtResource("1_jp6f5")

[node name="HBox" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="Simple" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProtoLabel" type="Label" parent="HBox/Simple"]
layout_mode = 2
text = "Prototype:"

[node name="Prototype" type="LineEdit" parent="HBox/Simple"]
layout_mode = 2

[node name="ScriptLabel" type="Label" parent="HBox/Simple"]
layout_mode = 2
text = "Connect to Script:"

[node name="HBox" type="HBoxContainer" parent="HBox/Simple"]
layout_mode = 2

[node name="Filter" type="LineEdit" parent="HBox/Simple/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Source" type="Button" parent="HBox/Simple/HBox"]
layout_mode = 2
text = " Go to Source "

[node name="SceneTree" type="Tree" parent="HBox/Simple"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/draw_guides = 0
theme_override_constants/draw_relationship_lines = 1
columns = 2
allow_reselect = true
select_mode = 1

[node name="ReceiverLabel" type="Label" parent="HBox/Simple"]
layout_mode = 2
text = "Reciever Method:"

[node name="Receiver" type="HBoxContainer" parent="HBox/Simple"]
layout_mode = 2

[node name="MethodName" type="LineEdit" parent="HBox/Simple/Receiver"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Pick" type="Button" parent="HBox/Simple/Receiver"]
layout_mode = 2
text = "Pick
"
icon = ExtResource("2_srxln")

[node name="Advanced" type="VBoxContainer" parent="HBox"]
visible = false
layout_mode = 2

[node name="NodeCallableDialog" type="ConfirmationDialog" parent="."]
title = "Select Method From list"
initial_position = 4
size = Vector2i(480, 512)
min_size = Vector2i(360, 480)
ok_button_text = "Select"

[node name="VBox" type="VBoxContainer" parent="NodeCallableDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 463.0

[node name="Filter" type="LineEdit" parent="NodeCallableDialog/VBox"]
layout_mode = 2
right_icon = ExtResource("3_iv5k0")

[node name="CallableList" type="Tree" parent="NodeCallableDialog/VBox"]
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
hide_root = true

[node name="ScriptOnly" type="CheckButton" parent="NodeCallableDialog/VBox"]
visible = false
layout_mode = 2
button_pressed = true
text = "Script Methods Only"
alignment = 2

[node name="CompatibleOnly" type="CheckButton" parent="NodeCallableDialog/VBox"]
visible = false
layout_mode = 2
disabled = true
button_pressed = true
text = "Compatible Methods Only"
alignment = 2

[connection signal="confirmed" from="." to="." method="_on_method_confirmed"]
[connection signal="text_changed" from="HBox/Simple/HBox/Filter" to="." method="_on_filter_changed"]
[connection signal="pressed" from="HBox/Simple/HBox/Source" to="." method="_on_source_pressed"]
[connection signal="item_selected" from="HBox/Simple/SceneTree" to="." method="_on_method_node_selected"]
[connection signal="pressed" from="HBox/Simple/Receiver/Pick" to="." method="_on_pick_pressed"]
[connection signal="confirmed" from="NodeCallableDialog" to="." method="_on_callable_confirmed"]
[connection signal="text_changed" from="NodeCallableDialog/VBox/Filter" to="." method="_on_method_filter_changed"]
